# wagtail-neuralyzer

./: MANIFEST.in  Makefile  README.md  pyproject.toml  tbump.toml
.github/workflows/: build_n_publish.yml
tests/: models.py  neuralizers.py  requirements.txt
wagtail_neuralyzer/: action.py  apps.py  menu_item.py  views.py  wagtail_hooks.py
wagtail_neuralyzer/locale/fr/LC_MESSAGES/: django.mo  django.po
wagtail_neuralyzer/templates/wagtailadmin/generic/: confirm_neuralyze.html
wagtail_neuralyzer/templates/wagtailadmin/wagtail_neuralyzer/bulk_actions/: confirm_bulk_neuralyze.html  list_items_with_no_access.html
